# MemoryManagementSim

./: README.md
actualmemmansim/: .gitignore  CMakeLists.txt
actualmemmansim/include/sim/: MMU.h  TLB.h  allocator.h  clock.h  event.h  metrics.h  physicalmem.h  process.h  scheduler.h  workload.h
actualmemmansim/src/: MMU.cpp  TLB.cpp  allocator_firstfit.cpp  clock.cpp  eventqueue.cpp  main.cpp  metrics.cpp  physicalmem.cpp  process.cpp  scheduler.cpp  workload.cpp  workload.cpp.old
actualmemmansim/tests/: test_allocator_paging.csv  test_async_paging.csv  test_coalsce.csv  test_fragmentation_stress.csv  test_heapexhaustion_trace.csv  test_heapgrowth_trace.csv  test_lazy_alloc.csv  test_longrun_durability.csv  test_sample_trace.csv
